Fix bug where context menu disappears when you right click on a new item. Add "Recategorize All" on transaction view for easy recategorization of a bunch of transactions. Fix some performance bugs to do with viewing by category. Add a new CategoryType called "Investments" so this type of transaction can be grouped separately. Make it possible to select the category groups "Income" and "Expense" so you can see history chart all up. Fix bug that happens when user enters bad data in a row, (the money model stops updating). Make it possible to select column of bar chart by mouse clik on column labels.

--- a/Source/MyMoney/MyMoney.csproj
+++ b/Source/MyMoney/MyMoney.csproj
@@ -199,6 +199,9 @@
     </Compile>
     <Compile Include="Controls\Resizer.cs" />
     <Compile Include="Controls\WpfConverters.cs" />
+    <Compile Include="Dialogs\RecategorizeDialog.xaml.cs">
+      <DependentUpon>RecategorizeDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\MoneyFileImportDialog.xaml.cs">
       <DependentUpon>MoneyFileImportDialog.xaml</DependentUpon>
     </Compile>
@@ -784,6 +787,10 @@
     <Page Include="Controls\DropDownButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialogs\RecategorizeDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Dialogs\MoneyFileImportDialog.xaml">
       <SubType>Designer</SubType>
