Fix TSL network connection problems with some OFX banks (Citibank).   This is done by upgrading MyMoney app to use .NET Framework version 4.6.1.

--- a/Source/MyMoney/app.config
+++ b/Source/MyMoney/app.config
@@ -3,18 +3,16 @@
   <configSections>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_ICurrencyService" />
+        <binding name="BasicHttpBinding_ICurrencyService"/>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://www.restfulwebservices.net/wcf/CurrencyService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICurrencyService"
-        contract="RestfulWebServices.ICurrencyService" name="BasicHttpBinding_ICurrencyService" />
+      <endpoint address="http://www.restfulwebservices.net/wcf/CurrencyService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICurrencyService" contract="RestfulWebServices.ICurrencyService" name="BasicHttpBinding_ICurrencyService"/>
     </client>
   </system.serviceModel>
 </configuration>
