--- a/Source/MyMoney/packages.config
+++ b/Source/MyMoney/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.82.0" targetFramework="net40" />
 </packages>
