Further optimize startup performance by delaying the use of stock quote history until the user does a "View by security" request.  Optimize when stock quote history is downloaded, namely, only when there are holes in the history that need filling. Add a "stock" tab with chart showing stock history (when in "View by security" mode).

--- a/Source/WPF/MyMoney/MyMoney.csproj
+++ b/Source/WPF/MyMoney/MyMoney.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Utilities\DelayedAction.cs" />
     <Compile Include="Utilities\FileHash.cs" />
     <Compile Include="Utilities\RecentFilesMenu.cs" />
+    <Compile Include="Utilities\UsHolidays.cs" />
     <Compile Include="Views\ChangeTracker.cs" />
     <Compile Include="Database\CostBasis.cs" />
     <Compile Include="Database\SqliteDatabase.cs" />
@@ -469,6 +470,7 @@
       <DependentUpon>CurrenciesView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\FindManager.cs" />
+    <Compile Include="Views\GraphGenerators.cs" />
     <Compile Include="Views\LoansView.xaml.cs">
       <DependentUpon>LoansView.xaml</DependentUpon>
     </Compile>
