--- a/Source/WPF/MyMoney/MyMoney.csproj
+++ b/Source/WPF/MyMoney/MyMoney.csproj
@@ -202,6 +202,9 @@
     <Compile Include="Controls\PasswordControl.xaml.cs">
       <DependentUpon>PasswordControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\ProgressDots.xaml.cs">
+      <DependentUpon>ProgressDots.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\RoundedButton.xaml.cs">
       <DependentUpon>RoundedButton.xaml</DependentUpon>
     </Compile>
@@ -799,6 +802,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\PasswordControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\ProgressDots.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
