--- a/Source/WPF/Tests/packages.config
+++ b/Source/WPF/Tests/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VisualStudio.DgmlTestModeling.2015.dll" version="3.2.0" targetFramework="net45" />
+  <package id="LovettSoftware.DgmlTestModeling.2017.dll" version="3.5.0" targetFramework="net461" />
 </packages>
