--- a/Source/WPF/Tests/packages.config
+++ b/Source/WPF/Tests/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LovettSoftware.DgmlTestModeling.2017.dll" version="3.5.0" targetFramework="net461" />
+  <package id="LovettSoftware.DgmlTestModeling" version="3.8.1" targetFramework="net472" />
 </packages>
