--- a/Source/WPF/Tests/Tests.csproj
+++ b/Source/WPF/Tests/Tests.csproj
@@ -88,7 +88,7 @@
   </Choose>
   <ItemGroup>
     <Reference Include="LovettSoftware.DgmlTestModeling, Version=3.8.1.0, Culture=neutral, PublicKeyToken=ab3ea86545595e2b, processorArchitecture=MSIL">
-      <HintPath>..\packages\LovettSoftware.DgmlTestModeling.3.8.1\lib\net472\LovettSoftware.DgmlTestModeling.dll</HintPath>
+      <HintPath>..\packages\LovettSoftware.DgmlTestModeling.2019.dll.3.8.1\lib\net472\LovettSoftware.DgmlTestModeling.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
@@ -190,7 +190,7 @@
     <Content Include="docit\ILToXml.exe" />
     <Content Include="docit\Microsoft.VisualStudio.DgmlTestModeling.xml" />
     <Content Include="docit\System.Compiler.dll" />
-    <Content Include="Readme.htm" />
+    <Content Include="Package\Dgml.png" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
