--- a/Source/WPF/PublishNewDrop/PublishNewDrop.csproj
+++ b/Source/WPF/PublishNewDrop/PublishNewDrop.csproj
@@ -49,6 +49,12 @@
     <Compile Include="..\MyMoney\Utilities\FtpUtilities.cs">
       <Link>FtpUtilities.cs</Link>
     </Compile>
+    <Compile Include="..\Version\CommonInfo.cs">
+      <Link>Properties\CommonInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\Version\Version.cs">
+      <Link>Properties\Version.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
