--- a/Source/Xamarin/project/Mac/packages.config
+++ b/Source/Xamarin/project/Mac/packages.config
@@ -11,7 +11,7 @@
   <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.5-pre20210119130047" targetFramework="xamarinmac20" />
   <package id="System.Buffers" version="4.5.1" targetFramework="xamarinmac20" />
   <package id="System.Memory" version="4.5.4" targetFramework="xamarinmac20" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="xamarinmac20" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0-preview.2.21154.6" targetFramework="xamarinmac20" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="xamarinmac20" />
   <package id="Xamarin.Essentials" version="1.6.1" targetFramework="xamarinmac20" />
   <package id="Xamarin.Forms" version="5.0.0.2012" targetFramework="xamarinmac20" />
