--- a/Source/Xamarin/project/Shared/xMoney.csproj
+++ b/Source/Xamarin/project/Shared/xMoney.csproj
@@ -17,7 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
     <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
-    <PackageReference Include="SkiaSharp.Views.Forms" Version="2.88.0-preview.127" />
+    <PackageReference Include="SkiaSharp.Views.Forms" Version="2.80.3" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.103-beta" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
