--- a/Source/Xamarin/project/Mac/packages.config
+++ b/Source/Xamarin/project/Mac/packages.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SkiaSharp" version="2.80.3-preview.93" targetFramework="xamarinmac20" />
-  <package id="SkiaSharp.Views" version="2.80.3-preview.93" targetFramework="xamarinmac20" />
-  <package id="SkiaSharp.Views.Forms" version="2.80.3-preview.93" targetFramework="xamarinmac20" />
-  <package id="sqlite-net-pcl" version="1.8.0-beta" targetFramework="xamarinmac20" />
-  <package id="SQLitePCLRaw.bundle_green" version="2.0.5-pre20210521085756" targetFramework="xamarinmac20" />
-  <package id="SQLitePCLRaw.core" version="2.0.5-pre20210521085756" targetFramework="xamarinmac20" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.5-pre20210521085756" targetFramework="xamarinmac20" />
+  <package id="SkiaSharp" version="2.80.3" targetFramework="xamarinmac20" />
+  <package id="SkiaSharp.Views" version="2.80.3" targetFramework="xamarinmac20" />
+  <package id="SkiaSharp.Views.Forms" version="2.80.3" targetFramework="xamarinmac20" />
+  <package id="sqlite-net-pcl" version="1.8.116" targetFramework="xamarinmac20" />
+  <package id="SQLitePCLRaw.bundle_green" version="2.0.6" targetFramework="xamarinmac20" />
+  <package id="SQLitePCLRaw.core" version="2.0.6" targetFramework="xamarinmac20" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.6" targetFramework="xamarinmac20" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.14" targetFramework="xamarinmac20" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.5-pre20210521085756" targetFramework="xamarinmac20" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.6" targetFramework="xamarinmac20" />
   <package id="System.Buffers" version="4.5.1" targetFramework="xamarinmac20" />
   <package id="System.Memory" version="4.5.4" targetFramework="xamarinmac20" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0-preview.5.21301.5" targetFramework="xamarinmac20" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="xamarinmac20" />
-  <package id="Xamarin.Essentials" version="1.6.1" targetFramework="xamarinmac20" />
-  <package id="Xamarin.Forms" version="5.0.0.2012" targetFramework="xamarinmac20" />
+  <package id="Xamarin.Essentials" version="1.7.0" targetFramework="xamarinmac20" />
+  <package id="Xamarin.Forms" version="5.0.0.2125" targetFramework="xamarinmac20" />
 </packages>
